--- a/app/src/main/res/layout/profile_view.xml
+++ b/app/src/main/res/layout/profile_view.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/app_ico_background">
@@ -35,8 +34,7 @@
                 android:minWidth="44dp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:srcCompat="@drawable/default_profile"
-                tools:layout_editor_absoluteY="72dp" />
+                app:srcCompat="@drawable/default_profile"/>
 
             <Button
                 android:id="@+id/editAvatarButton"
