--- a/app/src/main/res/layout/activity_sendmoney_confirm.xml
+++ b/app/src/main/res/layout/activity_sendmoney_confirm.xml
@@ -32,7 +32,7 @@
             android:layout_marginTop="25dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=""
+            android:textAlignment="center"
             android:textColor="@android:color/white"
             android:textSize="42sp"
             app:layout_constraintBottom_toTopOf="@+id/to"
@@ -46,7 +46,7 @@
             android:layout_marginTop="45dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=""
+            android:textAlignment="center"
             android:textColor="@android:color/white"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
