--- a/app/src/main/res/layout/sendmoney_address_fragment.xml
+++ b/app/src/main/res/layout/sendmoney_address_fragment.xml
@@ -1,59 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/bg_gray">
 
     <android.support.constraint.ConstraintLayout
-        android:id="@+id/content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
-        <LinearLayout
+        <View
+            style="@style/Divider"
+            app:layout_constraintTop_toTopOf="@id/white_view"/>
+        <View
+            android:id="@+id/white_view"
             android:layout_width="match_parent"
-            android:layout_height="53dp"
-            android:layout_marginTop="43dp"
-            android:paddingLeft="16dp"
+            android:layout_height="43dp"
             android:background="@android:color/white"
-            app:layout_constraintTop_toTopOf="@id/content">
+            android:layout_marginTop="43dp"
+            app:layout_constraintTop_toTopOf="parent"/>
+        <View
+            style="@style/Divider"
+            app:layout_constraintTop_toBottomOf="@id/white_view"/>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/addr_input_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint=" "
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:layout_marginTop="33dp"
+            app:errorEnabled="true"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/addr_edit_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="15sp"
+                android:ems="17"
+                android:maxLength="35"
+                android:singleLine="true"
+                android:ellipsize="end"
+                android:hint="@string/hint_bitcoin_address"/>
+
+        </android.support.design.widget.TextInputLayout>
 
 
-            <TextView
-                android:id="@+id/addr_label"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:paddingRight="10dp"
-                android:textColor="@android:color/black"
-                android:text="@string/bitcoin_address" />
-
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/addr_input_layout"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:paddingRight="8dp"
-                android:gravity="center_vertical"
-                app:errorEnabled="true"
-                app:layout_constraintStart_toEndOf="@+id/addr_label">
-
-                <android.support.design.widget.TextInputEditText
-                    android:id="@+id/addr_edit_text"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textSize="15sp"
-                    android:ems="17"
-                    android:maxLength="35"
-                    android:maxLines="1"
-                    android:ellipsize="end"
-                    android:gravity="center"
-                    android:background="@android:color/transparent" />
-
-            </android.support.design.widget.TextInputLayout>
-
-        </LinearLayout>
     </android.support.constraint.ConstraintLayout>
 
 </android.support.constraint.ConstraintLayout>
