--- a/app/src/main/res/layout/scan_tab.xml
+++ b/app/src/main/res/layout/scan_tab.xml
@@ -2,6 +2,7 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -34,7 +35,7 @@
             android:id="@+id/imageView2"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:src="@drawable/ic_photo_camera_black_24dp" />
+            app:srcCompat="@drawable/ic_photo_camera_black_24dp" />
 
         <TextView
             android:id="@+id/textView3"
